--- a/webshop/src/i18n/et.json
+++ b/webshop/src/i18n/et.json
@@ -10,5 +10,8 @@
     "cart": "Ostukorvi",
     "login": "Logi sisse",
     "signup": "Registreeru"
+  },
+  "error": {
+    "passwords-do-not-match": "Paroolid ei ühti"
   }
 }
